# VSEMU

./: CMakeLists.txt  LICENSE  README.md
include/: libvsemu.h
src/cli/: main.c
src/libvsemu/: cmake_config.h.in  common.h  decode.c  execute.c  fetch_decode.h  libvsemu.version  logging.c  logging.h  memory.c  registers.h  state_lifetime.c  tick.c  version.c.in
